tests-integration/fixtures/checking/252_invalid_type_application_basic/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms

Types
Bad :: ???

Synonyms
Bad = Int String
  Quantified = :0
  Kind = :0
  Type = :0


Diagnostics
error[InvalidTypeApplication]: Cannot apply type 'Int' to 'String'. 'Int' has kind 'Type', which is not a function kind.
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with '???'
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
